Added stop/start buttons

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 <body>
     <main>
         <canvas></canvas>
+        <button id="start">Start</button>
+        <button id="stop">Stop</button>
     </main>
 </body>
 </html>
