Added styles for button

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
 <body>
     <main>
         <canvas></canvas>
-        <button id="start">Start</button>
-        <button id="stop">Stop</button>
+        <div class="controls">
+            <button id="start">Start</button>
+            <button id="stop">Stop</button>
+        </div>
     </main>
 </body>
 </html>
